# docker_cpp_qt_builder_images

./: .travis.yml  README.md  rebuild_and_upload.py
.github/workflows/: ci.yml  dockerimage.yml
clang/: Dockerfile  build.sh
gcc/: Dockerfile  build.sh
qt/: Dockerfile  build.sh
test_example/: CMakeLists.txt
